# openet-geesebal

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.py
.github/workflows/: pytest.yml
examples/: collection_interpolate.ipynb  collection_overpass.ipynb  image_mapping.ipynb  single_image.ipynb
openet-geesebal/geesebal/: __init__.py  openet_landsat.py  utils.py
openet/geesebal/: __init__.py  interpolate.py  model.py  model_international.py  openet_collection.py  openet_image.py  openet_interpolate.py  openet_landsat.py  reference_et.py  utils.py
openet/geesebal/tests/: conftest.py  test_a_utils.py  test_b_landsat.py  test_c_model.py  test_d_openet_image.py  test_e_openet_collection.py  test_f_openet_interpolate.py
